--- a/layout/style/index.css
+++ b/layout/style/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,600i,700,800&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -10,28 +10,34 @@ body {
 .main {
     padding: 100px 0;
 }
+
 .container {
     background: #ffffff;
-    max-width: 1150px;
+    max-width: 1200px;
     margin: auto;
-    padding: 0 15px;
+    padding: 0 100px;
     text-align: center;
     box-sizing: border-box;
     font-size: 0px;
 }
-.inner {
+
+.inner,.price {
     display: flex;
 }
+
 .info {
     margin-bottom: 80px;
 }
+
 h1 {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
+    font-weight: lighter;
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 30px;
 }
+
 h2 {
     font-size: 20px;
     line-height: 20px;
@@ -39,16 +45,102 @@ h2 {
     font-weight: bold;
     margin-bottom: 30px;
 }
+
 img,svg {
     margin-bottom: 30px;
 }
+
 p {
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
     color: #86878b;
 }
+
 .content:nth-child(2) {
     margin-left: 32px;
     margin-right: 32px;
+}
+
+/* Second block */
+.container-price {
+    background: #f5f5f5;
+}
+
+table {
+    width: 33.3%;
+    border-spacing: 0px;
+}
+
+table:nth-child(2) {
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+tr:nth-child(1) td {
+    font-family: 'Open Sans', sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px 0;
+}
+
+tr:nth-child(2) td {
+    color: #ffffff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 35px;
+    font-weight: bold;
+    padding: 10px 0px 0px;
+}
+
+tr:nth-child(3) td {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #999999;
+    font-weight: 600;
+    font-style: italic;
+    padding: 15px 0 20px;
+}
+
+table tr:nth-child(-n+3) td {
+    background: #333333;
+}
+
+table tr:nth-child(-n+2) td {
+    border-bottom: 1px solid #ffffff;
+}
+
+table tr:nth-child(n+4) td {
+    font-size: 14px;
+    background: #ffffff;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    color: #86878b;
+    border-bottom: 1px solid #f5f5f5;
+    padding: 10px 0;
+}
+
+.professional tr:nth-child(4) td {
+    background: #ff8b38;
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    padding: 11px 0;
+}
+
+.test {
+    border-bottom: 5px solid #ff8b38;
+}
+
+.price {
+    align-items: flex-end;
+}
+
+span {
+    font-size: 94px;
+    line-height: 94px;
+}
+
+.letter {
+    vertical-align: bottom;
 }
 
