second block fixed

--- a/layout/style/index.css
+++ b/layout/style/index.css
@@ -23,7 +23,7 @@ body {
 
 .inner,.price {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .info {
