--- a/layout/index.html
+++ b/layout/index.html
@@ -12,7 +12,6 @@
         <div class="container">
             <div class="main awesome-main">
             <h1>Why this is awesome</h1>
-            <img src="icons/icon_1.png" alt="line">
             <p class="info">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 <div class="inner">
                     <div class="content">
@@ -42,7 +41,6 @@
         <div class="container container-price">
             <div class="main main-price">
                 <h1>Pricing options</h1>
-                <img src="icons/icon_1.png" alt="line">
                 <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <div class="price">
                     <table class="basic">
@@ -138,6 +136,58 @@
                 </div>    
             </div>
         </div>
-    </section>    
+    </section>
+    <section class="test_1">
+       <div class="container">
+           <div class="main">
+               <h1 class="tester">What our customers saying</h1>
+               <p class="info_customer">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+               <div class="coments">
+                   <div class="inner">Lorem ipsum dolor sit amet, 
+                    consectetur adipisicing elit. Doloribus 
+                    accusamus expedita repellat similique 
+                    odio aspernatur ex, architecto eaque 
+                    quo suscipit.
+                    </div>
+                   <div class="inner">Lorem ipsum dolor sit amet, 
+                    consectetur adipisicing elit. Doloribus 
+                    accusamus expedita repellat similique 
+                    odio aspernatur ex, architecto eaque 
+                    quo suscipit.</div>
+                   <div class="inner">Lorem ipsum dolor sit amet, 
+                    consectetur adipisicing elit. Doloribus 
+                    accusamus expedita repellat similique 
+                    odio aspernatur ex, architecto eaque 
+                    quo suscipit.</div>
+               </div>
+               <div class="avatars">
+                   <div class="inner">
+                    <img src="icons/avatar.png" alt="customer">
+                    <p class="position"><span class="name">Jeremy H.</span><br>Manager</p>
+                   </div>
+                   <div class="inner">
+                    <img src="icons/avatar.png" alt="customer">
+                    <p class="position"><span class="name">Jhon S.</span><br>Freelancer</p>
+                   </div>
+                   <div class="inner">
+                       <img src="icons/avatar.png" alt="customer">
+                       <p class="position"><span class="name">Susan W.</span><br>Photographer</p>
+                   </div>
+               </div>
+           </div>
+       </div>
+    </section> 
+    <section class="custom">
+        <div class="container container_axure">
+            <div class="main main_axure">
+                <h1 class="tester">Stylish axure design</h1>
+                <p class="info_customer">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</p>
+                <a href="#">Download</a>
+            </div>
+        </div>
+    </section>
+    <div class="footer">
+        
+    </div>   
 </body>
 </html>
